# iai_kinect2

./: README.md
kinect2_bridge/: CMakeLists.txt  freenect2_quick_setup.bash  nodelets.xml  package.xml
kinect2_bridge/include/: kinect2_definitions.h
kinect2_bridge/include/kinect2_bridge/: freenect2_bridge.h
kinect2_bridge/launch/: 2kinect2test.launch  freenect2_bridge.launch  kinect2_bridge.launch
kinect2_bridge/launch/include/: kinect2_frames.launch
kinect2_bridge/script/: freenect2_quick_setup.bash
kinect2_bridge/src/: freenect2_bridge.cpp  freenect2_node.cpp  freenect2_nodelet.cpp  kinect2_bridge.cpp
